<resources>
    <string name="app_name">智能宠物屋</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">登录</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="please_input_phone">请输入手机号</string>
</resources>
