<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar_register">
            <android.support.v7.widget.Toolbar
                android:fitsSystemWindows="true"
                android:id="@+id/register_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_below="@id/appbar_register"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/register_username_edit"
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/please_input_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5">
                    <EditText
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/register_code_edit"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:hint="@string/please_input_code"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/register_code_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_dwon"
                    android:text="@string/get_code"
                    android:layout_marginRight="16dp"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/register_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_password2_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="3"
                    android:hint="@string/please_input_password_again"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>